# fogbugz-py

./: .gitignore  LICENSE  Makefile  README.md  config.example.toml  pyproject.toml
docs/: API_DESIGN.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  PACKAGING.md  ROADMAP.md
examples/: 01_fetch_by_id.py  02_search_assigned.py  03_single_filter.py  04_multiple_filters.py  05_custom_search.py  06_iterate_and_group.py  07_date_filtering.py  08_compound_status.py  09_case_events.py  10_case_analysis.py  11_pending_customer_emails.py  12_open_bugs_with_correspondent.py  README.md  __init__.py  log_config.py
scratch/: deleteme.py
scripts/: run_examples.py
src/fogbugz_py/: __init__.py  client.py  constants.py  exceptions.py
src/fogbugz_py/auth/: __init__.py  resolver.py
src/fogbugz_py/cli/: __init__.py  app.py  context.py  output.py
src/fogbugz_py/cli/commands/: case.py  people.py  projects.py  search.py  whoami.py
src/fogbugz_py/config/: loader.py  models.py
src/fogbugz_py/http/: __init__.py  errors.py  retry.py  timeouts.py  transport.py
src/fogbugz_py/logging/: __init__.py  setup.py
src/fogbugz_py/models/: __init__.py  case.py  event.py  person.py  project.py
src/fogbugz_py/resources/: __init__.py  cases.py  people.py  projects.py
src/fogbugz_py/utils/: typing.py
tests/: __init__.py  conftest.py  test_client.py  test_misc_coverage.py
tests/auth/: test_resolver.py
tests/cli/: test_case_projects.py  test_command_modules.py  test_output.py  test_people.py  test_search.py
tests/config/: test_loader.py
tests/fixtures/configs/: README.md  sample_config.toml
tests/fixtures/responses/: README.md  case_single.json
tests/http/: test_retry.py  test_transport.py
tests/models/: test_event.py
tests/resources/: test_cases.py  test_people_resource.py  test_projects.py
tests/smoketest/: test_basic.py  test_cli_read_commands.py
