[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fogbugz-py"
version = "0.1.0"
description = "A modern, async-first Python client for FogBugz"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Hardik Raina", email = "hardikraina079@gmail.com" }
]
keywords = [
    "fogbugz",
    "async",
    "api-client",
    "manuscript",
    "bug-tracking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pydantic>=2.12.5",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli>=2.4.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
logging = [
    "structlog>=25.5.0",
]
typer = [
    "typer>=0.21.1",
    "rich>=14.3.2",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
]

[project.scripts]
fogbugz = "fogbugz_py.cli:main"

[project.urls]
Homepage = "https://github.com/Raina-Hardik/fogbugz-py"
Documentation = "https://github.com/Raina-Hardik/fogbugz-py/blob/main/README.md"
Repository = "https://github.com/Raina-Hardik/fogbugz-py"
Issues = "https://github.com/Raina-Hardik/fogbugz-py/issues"

# Hatch configuration
[tool.hatch.version]
path = "src/fogbugz_py/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fogbugz_py"]

# Hatch environments
[tool.hatch.envs.default]
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov = "pytest --cov=fogbugz_py --cov-report=html --cov-report=term {args}"
cov-report = "python -m webbrowser htmlcov/index.html"

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "types-requests",
]

[tool.hatch.envs.dev.scripts]
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
type-check = "mypy src/"
all = [
    "format",
    "lint",
    "type-check",
    "test-cov",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
[tool.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
    "B",
    "B9",
    "ANN",
    "ARG",
    "COM",
    "D",
    "DAR",
    "DAR101",
    "I",
    "N",
    "Q",
    "S",
    "SIM",
    "TYP",
    "YTT",
]
ignore = [
    "E501",
    "D107",
    "D104",
    "D106",
    "DAR201",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unreachable = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
